--- a/waste-management-api/package.json
+++ b/waste-management-api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "pg-promise": "^11.4.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.2"
+    "swagger-ui-express": "^4.6.2",
+    "terraformer-wkt-parser": "^1.2.1"
   }
 }
