--- a/waste-management-api/package.json
+++ b/waste-management-api/package.json
@@ -16,11 +16,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mathjs": "^11.9.0",
-    "pg-promise": "^11.4.3",
+    "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
+    "pg-promise": "^11.5.3",
     "pug": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
-    "terraformer-wkt-parser": "^1.2.1"
+    "terraformer-wkt-parser": "^1.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
